--- a/src/shared/Navbar/Navbar.css
+++ b/src/shared/Navbar/Navbar.css
@@ -1,4 +1,4 @@
-.menu li > a {
+/* .menu li > a {
     background: none;
 }
 .menu li > .active {
@@ -6,4 +6,4 @@
     background: none;
     color: #4640DE;
     text-underline-offset: 10px;
-}
+} */
